@@ -12,9 +12,10 @@ ERROR: {
 	if($@) {
 		plan(skip_all => 'Test::Carp needed to check error messages');
 	} else {
-		plan(tests => 11);
+		plan(tests => 12);
+
 		my $f = new_ok('DateTime::Format::Genealogy');
-		does_carp_that_matches(sub { $f->parse_datetime('29 SepX 1939') }, qr/^29 SepX 1939/);
+		does_croak_that_matches(sub { $f->parse_datetime('29 SepX 1939') }, qr/^Unparseable date/);
 		does_carp_that_matches(sub { $f->parse_datetime('31 Nov 1939') }, qr/^31 Nov 1939/);
 		does_croak_that_matches(sub { $f->parse_datetime(['29 Sep 1939']) }, qr/^Usage:/);
 		does_croak_that_matches(sub { $f->parse_datetime({ datex => '30 Sep 1939' }) }, qr/^Usage:/);
@@ -24,5 +25,6 @@ ERROR: {
 		does_croak_that_matches(sub { $f->parse_datetime() }, qr/^Usage:/);
 		does_croak_that_matches(sub { $f->parse_datetime(date => undef) }, qr/^Usage:/);
 		does_carp_that_matches(sub { $f->parse_datetime({ date => '28 Jul 1914 - 11 Nov 1918' }) }, qr/Changing date/);
+		does_croak_that_matches(sub { $f->parse_datetime(date => '12 June 2020', strict => 1) }, qr/^Unparseable date/);
 	}
 }
