@@ -4,7 +4,7 @@ use strict;
 use warnings;
 use Test::Most;
 
-unless($ENV{RELEASE_TESTING}) {
+unless($ENV{AUTHOR_TESTING}) {
 	plan(skip_all => "Author tests not required for installation");
 }
 
@@ -14,7 +14,7 @@ eval 'use warnings::unused';
 if($@ || ($warnings::unused::VERSION < 0.04)) {
 	plan(skip_all => 'warnings::unused >= 0.04 needed for testing');
 } else {
-	use_ok('CGI::Info');
-	new_ok('CGI::Info');
+	use_ok('DateTime::Format::Genealogy');
+	new_ok('DateTime::Format::Genealogy');
 	plan tests => 2;
 }
